--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.pyc
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -19,16 +18,20 @@ env/
 # IDEs
 .idea/
 .vscode/
+*.sublime-*
 
-# Environment variables
+# Environment variables and secrets
 .env
+.env.*
 
 # Django static and media files
+/static/
 /staticfiles/
 /media/
+/mediafiles/
 
-# Ignore migrations, as they are auto-generated
-**/migrations/
+# Ignore migrations
+**/migrations/*
 
 # Ignore local settings
 **/local_settings.py
@@ -36,3 +39,31 @@ env/
 # Ignore system files
 .DS_Store
 Thumbs.db
+
+# Ignore Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# Celery beat schedule file
+celerybeat-schedule
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+
+# Testing and debugging artifacts
+pytest_cache/
+.pytest_cache/
+*.cover
+*.orig
+*.rej
+
+# Django admin-generated files
+*.pot
+*.mo
+
+# MyPy type-checking artifacts
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
